--- a/index.html
+++ b/index.html
@@ -27,33 +27,25 @@
 	-->
 
 
-
-<!--nav class="sticky"> --><style>
-	
-<div class="Home" style="width: auto; height: 966px; position: relative; background: linear-gradient(0deg, white 0%, white 100%), linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%)">
-  <div class="Menu" style="height: 120px; left: -1px; top: 0px; position: relative; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
-    <div class="Rectangle1" style="height: 120px; left: 0px; top: 0px; position: relative">
-      <div class="Rectangle1" style=" height: 120px; left: 0px; top: 0px; position: relative; background: #8ECAE6"></div>
-      <div class="Logo" style="width: 101.90px; height: 113.37px; left: 1310px; top: 3px; position: relative">
-        <div class="Ellipse4" style="width: 46.73px; height: 98.96px; left: 0px; top: 0px; position: absolute; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%)"></div>
-        <div class="Rectangle2" style="width: 61.20px; height: 102.55px; left: 21px; top: 13px; position: absolute; transform: rotate(-12.15deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(222, 77, 134, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%)"></div>
-  
-	
-<ul class="menu">
-    <li class="menu"><a href="index.html">Home</a></li>
-    <li class="menu"><a href="about.html">About</a></li>
-    <li class="menu"><a href="projects.html">Work</a></li>
-    <li class="menu"><a href="shorts.html">Creative Outlets</a></li>
-    <li class="menu"><a href="contact.html">Contact</a></li>
+<style>
+<nav class="sticky">
+	<ul class="menu">
+	<li class="menu"><a href="index.html">Home</a></li>
+	    <li class="menu"><a href="about.html">About</a></li>
+	    <li class="menu"><a href="projects.html">Work</a></li>
+	    <li class="menu"><a href="shorts.html">Creative Outlets</a></li>
+	    <li class="menu"><a href="contact.html">Contact</a></li>
 	<li class="menu"><a href="example.html">example</a></li>
-</ul>
+	</ul>
+	</nav>
 </div>
-	</style>
+</style>
 </head>
 </section>
-	<section>
+<section>
 	<body>
-body {
+<!--
+		body {
   /* Define the gradient */
   background-image: linear-gradient(180deg, rgba(222, 77, 134, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%);
 ;
@@ -64,7 +56,7 @@ body {
   /* Set the margin to 0 to remove browser default margins */
   margin: 0;
 }
-
+-->
 
 <!--
     <div class="MenuDropdown" style="width: 177px; height: 278px; position: relative; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
