--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
 <style>
 <nav class="sticky">
-	<ul class="menu">
-	<li class="menu"><a href="index.html">Home</a></li>
-	    <li class="menu"><a href="about.html">About</a></li>
-	    <li class="menu"><a href="projects.html">Work</a></li>
-	    <li class="menu"><a href="shorts.html">Creative Outlets</a></li>
-	    <li class="menu"><a href="contact.html">Contact</a></li>
-	<li class="menu"><a href="example.html">example</a></li>
+	<ul class="Menu">
+	<li><a href="index.html">Home</a></li>
+	    <li><a href="about.html">About</a></li>
+	    <li><a href="projects.html">Work</a></li>
+	    <li><a href="shorts.html">Creative Outlets</a></li>
+	    <li><a href="contact.html">Contact</a></li>
+	<li><a href="example.html">example</a></li>
 	</ul>
 	</nav>
 </div>
