--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+     
 
 <html>
 <head>
@@ -7,7 +8,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script>
   <script src="script.js"></script>
-<section>
+
 <!--<div id="wrapper">
 <div class="menu" style="width: relative; height: 120px; left: 0px; top: 0px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
 	<div class="Rectangle1" style="relative: 1440px; height: 120px; left: 0px; top: 0px; position: absolute">
@@ -25,9 +26,44 @@
     <div class="Contact" style="left: 1065px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Contact</div>
   </div>
 	-->
-
-
-<style>
+	
+	<Title>     
+Make a Navigation Bar  
+</Title>  
+<style type=text/css>   
+body   
+{  
+height: 125vh;  
+margin-top: 80px;  
+padding: 30px;  
+background-size: cover;  
+font-family: sans-serif;  
+}  
+header {  
+background-color: orange;  
+position: fixed;  
+left: 0;  
+right: 0;  
+top: 5px;  
+height: 30px;  
+display: flex;  
+align-items: center;  
+box-shadow: 0 0 25px 0 black;  
+}  
+header * {  
+display: inline;  
+}  
+header li {  
+margin: 20px;  
+}  
+header li a {  
+color: blue;  
+text-decoration: none;  
+}  
+</style>  
+</Head> 
+<Body>   
+<header>  
 <nav class="sticky">
 	<ul class="Menu">
 	<li><a href="index.html">Home</a></li>
@@ -38,12 +74,10 @@
 	<li><a href="example.html">example</a></li>
 	</ul>
 	</nav>
-</div>
-</style>
-</head>
-</section>
+</header>  
+
 <section>
-	<body>
+
 <!--
 		body {
   /* Define the gradient */
