--- a/index.html
+++ b/index.html
@@ -31,16 +31,20 @@
 Make a Navigation Bar  
 </Title>  
 <style type=text/css>   
-body   
-{  
-height: 125vh;  
-margin-top: 80px;  
-padding: 30px;  
-background-size: cover;  
-font-family: sans-serif;  
-}  
+body {
+  /* Define the gradient */
+  background-image: linear-gradient(180deg, rgba(222, 77, 134, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%);
+;
+  
+  /* Set the height to 100% to take the full view */
+  height: 100%;
+  
+  /* Set the margin to 0 to remove browser default margins */
+  margin: 0;
+}
 header {  
-background-color: orange;  
+  
+background-color: #8ecae6;  
 position: fixed;  
 left: 0;  
 right: 0;  
@@ -48,7 +52,6 @@ top: 5px;
 height: 30px;  
 display: flex;  
 align-items: center;  
-box-shadow: 0 0 25px 0 black;  
 }  
 header * {  
 display: inline;  
@@ -57,9 +60,20 @@ header li {
 margin: 20px;  
 }  
 header li a {  
-color: blue;  
-text-decoration: none;  
+  color: black;
+  text-align: center;
+  text-decoration: none;
 }  
+header  a {
+  color: green;
+  text-align: center;
+  text-decoration: none;
+header li a: hover {
+  background-color: #111;
+header active {
+  background-color: #4CAF50;
+}
+	
 </style>  
 </Head> 
 <Body>   
