--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ header active {
 	    <li><a href="projects.html">Work</a></li>
 	    <li><a href="shorts.html">Creative Outlets</a></li>
 	    <li><a href="contact.html">Contact</a></li>
-	<li><a href="example.html">example</a></li>
+	<li><a href="Example.html">Example</a></li>
 	</ul>
 	</nav>
 </header>  
