--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@ header {
 background-color: #8ecae6;  
 position: fixed;  
 left: 0;  
-right: 0;  
-top: 5px;  
-height: 30px;  
+right: 0;   
+height: 100px;  
 display: flex;  
 align-items: center;  
+	
 }  
 header * {  
 display: inline;  
@@ -63,6 +63,8 @@ header li a {
   color: black;
   text-align: center;
   text-decoration: none;
+	font-size: 40px;
+  font-weight: 400;
 }  
 header  a {
   color: green;
