--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Make a Navigation Bar
 <style type=text/css>   
 body {
   /* Define the gradient */
-  background-image: linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%), #FFFFFF;
+  background-image: linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%);
 ;
   
   /* Set the height to 100% to take the full view */
