--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ header li a {
   text-decoration: none;
 	font-size: 40px;
   font-weight: 400;
+	font-family: Lilita One;
 }  
 header  a {
   color: green;
