--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 Make a Navigation Bar  
 </Title>  
 <style type=text/css>   
+	@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
 body {
   /* Define the gradient */
   background-image: linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%);
