--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ right: 0;
 height: 100px;  
 display: flex;  
 align-items: center;  
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
 	
 }  
 header * {  
