--- a/index.html
+++ b/index.html
@@ -35,15 +35,13 @@ Make a Navigation Bar
 body {
   /* Define the gradient */
   background-image: linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%);
-;
   
   /* Set the height to 100% to take the full view */
-  height: 100%;
+  height: auto;
   
   /* Set the margin to 0 to remove browser default margins */
   margin: 0;
-
-	overflow: hidden;
+overflow: hidden;
 }
 header {  
   
