--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ Make a Navigation Bar
 	@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
 body {
   /* Define the gradient */
+	background-color: white;
   background-image: linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%);
   
   /* Set the height to 100% to take the full view */
