--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ align-items: center;
 }  
 header * {  
 display: inline;  
+	
 }  
 header li {  
 margin: 20px;  
@@ -66,6 +67,7 @@ header li a {
   color: black;
   text-align: center;
   text-decoration: none;
+	left: 58px; top: 37px;
 	font-size: 40px;
   font-weight: 400;
 	font-family: Lilita One;
