--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 	<Title>     
 Make a Navigation Bar  
 </Title>  
+	<body style="
+    height: 1000px;
+"> 
 <style type=text/css>   
 	@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
 body {
