--- a/index.html
+++ b/index.html
@@ -30,9 +30,6 @@
 	<Title>     
 Make a Navigation Bar  
 </Title>  
-	<body style="
-    height: 1000px;
-"> 
 <style type=text/css>   
 	@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
 body {
@@ -87,7 +84,8 @@ header active {
 	
 </style>  
 </Head> 
-<Body>   
+<Body style="
+    height: 1000px";>   
 <header>  
 <nav class="sticky">
 	<ul class="Menu">
