--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-     
-
 <html>
 <head>
   <meta charset="utf-8">
@@ -27,14 +25,14 @@
   </div>
 	-->
 	
-	<Title>     
+<Title>     
 Make a Navigation Bar  
 </Title>  
-<style type=text/css>   
-	@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+<style type=text/css>  
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+
 body {
   /* Define the gradient */
-	background-color: white;
   background-image: linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%);
   
   /* Set the height to 100% to take the full view */
@@ -42,8 +40,11 @@ body {
   
   /* Set the margin to 0 to remove browser default margins */
   margin: 0;
-overflow: hidden;
+  
+  /* No scroll bar*/
+  overflow: hidden;
 }
+
 header {  
   
 background-color: #8ecae6;  
@@ -53,33 +54,82 @@ right: 0;
 height: 100px;  
 display: flex;  
 align-items: center;  
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
 	
-}  
+}
+
 header * {  
 display: inline;  
 	
-}  
+} 
+
 header li {  
 margin: 20px;  
+
 }  
+
 header li a {  
   color: black;
   text-align: center;
   text-decoration: none;
-	left: 60px; top: 35px;
-	font-size: 40px;
+  left: 60px; top: 35px;
+  font-size: 40px;
   font-weight: 400;
-	font-family: Lilita One;
+  font-family: Lilita One;
 }  
+
 header  a {
   color: green;
   text-align: center;
   text-decoration: none;
-header li a: hover {
-  background-color: #111;
-header active {
-  background-color: #4CAF50;
+  }
+
+/*dropdown section and placement*/
+
+header .dropdown {
+  overflow: hidden;
+}
+
+/*dropdown font and text (work)*/
+
+header .dropdown .dropbtn {
+  font-size: relative;  
+  border: none;
+  outline: none;
+  background-color: inherit;
+  font-family: Lilita One;
+  margin: 0;
+}
+
+header a:hover, .dropdown:hover .dropbtn {
+  background-color: #219EBC;
+}
+
+/*the link text*/
+
+header .dropdown-content {
+  display: none;
+  position: relative;
+  background-color: #FFF1DD;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+header .dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+}
+
+header .dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+header .dropdown:hover .dropdown-content {
+  display: block;
 }
 	
 </style>  
@@ -88,16 +138,29 @@ header active {
     height: 1000px";>   
 <header>  
 <nav class="sticky">
-	<ul class="Menu">
+	<ul class="header">
 	<li><a href="index.html">Home</a></li>
 	    <li><a href="about.html">About</a></li>
-	    <li><a href="projects.html">Work</a></li>
+	    <div class="dropdown"><li><a href="projects.html">
+        
+    <button class="dropbtn">Work
+      <i class="fa fa-caret-down"></i></a></li>
+    </button>
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div> 
 	    <li><a href="shorts.html">Creative Outlets</a></li>
 	    <li><a href="contact.html">Contact</a></li>
 	<li><a href="Example.html">Example</a></li>
 	</ul>
 	</nav>
 </header>  
+
+
 
 <!--
     <div class="MenuDropdown" style="width: 177px; height: 278px; position: relative; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
@@ -176,4 +239,5 @@ header active {
 </div>
 
 </body>
+</html>
 
