--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@ header .dropdown .dropbtn {
 }
 
 header a:hover, .dropdown:hover .dropbtn {
-  background-color: #219EBC;
+    background-color: #219EBC;
+    border-radius: 700px 700px;
+    box-size: 
 }
 
 /*the link text*/
