--- a/index.html
+++ b/index.html
@@ -78,12 +78,6 @@ header li a {
   font-family: Lilita One;
 }  
 
-header  a {
-  color: green;
-  text-align: center;
-  text-decoration: none;
-  }
-
 /*dropdown section and placement*/
 
 header .dropdown {
@@ -104,17 +98,19 @@ header .dropdown .dropbtn {
 header a:hover, .dropdown:hover .dropbtn {
     background-color: #219EBC;
     border-radius: 700px 700px;
-    box-size: 
 }
 
 /*the link text*/
 
 header .dropdown-content {
-  display: none;
-  position: relative;
+display: block;
+  position: fixed;
+  left: 44%;
+  width: 10%;
+  z-index: 1;
+  justify-content:flex-end;
   background-color: #FFF1DD;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
 }
 
 header .dropdown-content a {
@@ -127,7 +123,7 @@ header .dropdown-content a {
 }
 
 header .dropdown-content a:hover {
-  background-color: #ddd;
+  background-color: #FFA800;
 }
 
 header .dropdown:hover .dropdown-content {
