--- a/index.html
+++ b/index.html
@@ -103,14 +103,16 @@ header a:hover, .dropdown:hover .dropbtn {
 /*the link text*/
 
 header .dropdown-content {
-display: block;
-  position: fixed;
-  left: 44%;
-  width: 10%;
-  z-index: 1;
-  justify-content:flex-end;
-  background-color: #FFF1DD;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    display: flex;
+    position: absolute;
+    width: fit-content;
+    z-index: 1;
+    justify-content: center;
+    background-color: #FFF1DD;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    flex-wrap: nowrap;
+    flex-direction: column;
+    align-items: stretch;
 }
 
 header .dropdown-content a {
