--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ header a:hover, .dropdown:hover .dropbtn {
 
 header .dropdown-content {
     display: flex;
+	z-index: 5;
     position: absolute;
     width: fit-content;
     justify-content: center;
