--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@ header a:hover, .dropdown:hover .dropbtn {
 /*the link text*/
 
 header .dropdown-content {
-   float: none;
+   background-color: #FFA800;
+	  position: absolute;
+    width: fit-content;
   color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
+  display: flex;
   text-align: center;
 }
 
@@ -121,7 +121,6 @@ header .dropdown-content a {
 }
 
 header .dropdown-content a:hover {
-  background-color: #FFA800;
 	display: flex;
 	z-index: 10;
     position: absolute;
