--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@ header .dropdown-content a {
 }
 
 header .dropdown-content a:hover {
-	display: flex;
+
+  left: 4%;
+  display: flex;
 	z-index: 10;
     position: absolute;
     width: fit-content;
@@ -135,16 +137,7 @@ header .dropdown-content a:hover {
 
 header .dropdown:hover .dropdown-content {
   display: block;
-	display: flex;
-	z-index: 5;
-    position: absolute;
-    width: fit-content;
-    justify-content: center;
-    background-color: #FFF1DD;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    flex-wrap: nowrap;
-    flex-direction: column;
-    align-items: stretch;
+  
 }
 	
 </style>  
