--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@ header a:hover, .dropdown:hover .dropbtn {
 /*the link text*/
 
 header .dropdown-content {
-   background-color: #FFA800;
+   background-color: #FFF1DD;
 	  position: absolute;
     width: fit-content;
   color: black;
-  display: flex;
+	display:none
   text-align: center;
 }
 
@@ -128,7 +128,7 @@ header .dropdown-content a:hover {
     position: absolute;
     width: fit-content;
     justify-content: center;
-    background-color: #FFF1DD;
+    background-color: #FFA800;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     flex-wrap: nowrap;
     flex-direction: column;
