--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ header .dropdown-content {
 	  position: absolute;
     width: fit-content;
   color: black;
-	display:none
+	display: none;
   text-align: center;
 }
 
