--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@ header .dropdown {
 header .dropdown .dropbtn {
   font-size: relative;  
   border: none;
+	z-index: 10;
   outline: none;
   background-color: inherit;
   font-family: Lilita One;
@@ -104,6 +105,7 @@ header a:hover, .dropdown:hover .dropbtn {
 
 header .dropdown-content {
    background-color: #FFF1DD;
+	z-index: 10;
 	  position: absolute;
     width: fit-content;
   color: black;
@@ -113,6 +115,7 @@ header .dropdown-content {
 
 header .dropdown-content a {
   float: none;
+	z-index: 10;
   color: black;
   padding: 12px 16px;
   text-decoration: none;
