--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@ header .dropdown-content {
    background-color: #FFF1DD;
 	z-index: 10;
 	  position: absolute;
+	
     width: fit-content;
   color: black;
 	display: none;
@@ -116,7 +117,7 @@ header .dropdown-content {
 header .dropdown-content a {
   float: none;
 	z-index: 10;
-	left: 60px;
+left: 160px;
   color: black;
   padding: 12px 16px;
   text-decoration: none;
@@ -246,8 +247,7 @@ header .dropdown:hover .dropdown-content {
     <div class="Ellipse54" style="width: 69.34px; height: 186.96px; left: 761.36px; top: 178.62px; position: absolute; transform: rotate(-70.08deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
     <div class="Ellipse55" style="width: 113.62px; height: 138.88px; left: 595.94px; top: 178.71px; position: absolute; transform: rotate(-21.51deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
   </div>
- <div class="HelloSoGladYouReHereIfYouAreLookingForJadeRobertsYouVeComeToTheRightPlaceUnlessYouReLookingForASylvesterStalloneImpersonatorThatSALittleAwkwardILikeToThinkOfMyselfAsAJadeOfAllTradesIMACuriousSoulAndAFastLearnerWithMeOnYourTeamWeCanDefinitelyKnockoutLikeRocky" style="width: 631px;height: 531px;left: 85px;top: 242px;position: absolute;color: black;font-size: 32px;font-family: Lilita One;font-weight: 400;word-wrap: break-word;">Hello,<br><br>So glad you’re here. If you are looking for Jade Roberts, you’ve come to the right place. Unless you’re looking for a Sylvester Stallone impersonator. That’s a little awkward. <br><br>I like to think of myself as a Jade of all trades, I’m a curious soul and a fast learner. With me on your team, we can definitely knockout like Rocky. </div>
-
+ <div <div class="HelloSoGladYouReHereIfYouAreLookingForJadeRobertsYouVeComeToTheRightPlaceUnlessYouReLookingForASylvesterStalloneImpersonatorThatSALittleAwkwardILikeToThinkOfMyselfAsAJadeOfAllTradesIMACuriousSoulAndAFastLearnerWithMeOnYourTeamWeCanDefinitelyKnockoutLikeRocky" style="width: 631px;z-index: 3;height: 531px;left: 60px;top: 242px;position: absolute;color: black;font-size: 32px;font-family: Lilita One;font-weight: 400;word-wrap: break-word;">Hello,<br><br>So glad you’re here. If you are looking for Jade Roberts, you’ve come to the right place. Unless you’re looking for a Sylvester Stallone impersonator. That’s a little awkward. <br><br>I like to think of myself as a Jade of all trades, I’m a curious soul and a fast learner. With me on your team, we can definitely knockout like Rocky. </div>
 </body>
 </html>
 
