--- a/index.html
+++ b/index.html
@@ -105,29 +105,24 @@ header a:hover, .dropdown:hover .dropbtn {
 
 header .dropdown-content {
    background-color: #FFF1DD;
-	z-index: 10;
-	  position: absolute;
-	
-    width: fit-content;
-  color: black;
-	display: none;
-  text-align: center;
+display: none;
+  position: absolute;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
 }
 
 header .dropdown-content a {
-  float: none;
-	z-index: 10;
-left: 160px;
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
-  text-align: center;
+	font-family: Lilita One;
 }
 
 header .dropdown-content a:hover {
   display: flex;
-	left: 60px;
+	
 	z-index: 10;
     position: absolute;
     width: fit-content;
