--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ Jade Roberts Portfolio
 </Title>  
 <style type=text/css>  
 @import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+	@import url('https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&display=swap');
 
 body {
   /* Define the gradient */
@@ -92,7 +93,7 @@ header .dropdown .dropbtn {
 	z-index: 10;
   outline: none;
   background-color: inherit;
-  font-family: Lilita One;
+  font-family: Gudea;
   margin: 0;
 }
 
@@ -117,7 +118,7 @@ header .dropdown-content a {
   padding: 12px 16px;
   text-decoration: none;
   display: block;
-	font-family: Lilita One;
+	font-family: Gudea;
 }
 
 header .dropdown-content a:hover {
@@ -242,7 +243,7 @@ header .dropdown:hover .dropdown-content {
     <div class="Ellipse54" style="width: 69.34px; height: 186.96px; left: 761.36px; top: 178.62px; position: absolute; transform: rotate(-70.08deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
     <div class="Ellipse55" style="width: 113.62px; height: 138.88px; left: 595.94px; top: 178.71px; position: absolute; transform: rotate(-21.51deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
   </div>
- <div <div class="HelloSoGladYouReHereIfYouAreLookingForJadeRobertsYouVeComeToTheRightPlaceUnlessYouReLookingForASylvesterStalloneImpersonatorThatSALittleAwkwardILikeToThinkOfMyselfAsAJadeOfAllTradesIMACuriousSoulAndAFastLearnerWithMeOnYourTeamWeCanDefinitelyKnockoutLikeRocky" style="width: 631px;z-index: 3;height: 531px;left: 60px;top: 242px;position: absolute;color: black;font-size: 32px;font-family: Lilita One;font-weight: 400;word-wrap: break-word;">Hello,<br><br>So glad you’re here. If you are looking for Jade Roberts, you’ve come to the right place. Unless you’re looking for a Sylvester Stallone impersonator. That’s a little awkward. <br><br>I like to think of myself as a Jade of all trades, I’m a curious soul and a fast learner. With me on your team, we can definitely knockout like Rocky. </div>
+ <div <div class="HelloSoGladYouReHereIfYouAreLookingForJadeRobertsYouVeComeToTheRightPlaceUnlessYouReLookingForASylvesterStalloneImpersonatorThatSALittleAwkwardILikeToThinkOfMyselfAsAJadeOfAllTradesIMACuriousSoulAndAFastLearnerWithMeOnYourTeamWeCanDefinitelyKnockoutLikeRocky" style="width: 631px;z-index: 0;height: 531px;left: 60px;top: 242px;position: absolute;color: black;font-size: 32px;font-family: Lilita One;font-weight: 400;word-wrap: break-word;">Hello,<br><br>So glad you’re here. If you are looking for Jade Roberts, you’ve come to the right place. Unless you’re looking for a Sylvester Stallone impersonator. That’s a little awkward. <br><br>I like to think of myself as a Jade of all trades, I’m a curious soul and a fast learner. With me on your team, we can definitely knockout like Rocky. </div>
 </body>
 </html>
 
