--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@ Jade Roberts Portfolio
 </Title>  
 <style type=text/css>  
 @import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
-	@import url('https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&display=swap');
 body {
   /* Define the gradient */
   background-image: linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%);
@@ -83,7 +82,6 @@ header li a {
 
 header .dropdown {
   overflow: hidden;
-	z-index: 10;
 }
 
 /*dropdown font and text (work)*/
@@ -99,52 +97,44 @@ header .dropdown .dropbtn {
 }
 
 header a:hover, .dropdown:hover .dropbtn {
-	z-index: 10;
     background-color: #219EBC;
-    border-radius: 700px 700px;
-	
+    border-size: 80px 900px;
+    border-radius: 80px 900px;
 }
 
 /*the link text*/
 
 header .dropdown-content {
-   z-index: 10;
-	background-color: #FFF1DD;
+   background-color: #FFF1DD;
 display: none;
   position: absolute;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-
+  z-index: 1;
 }
 
 header .dropdown-content a {
-       z-index: 10;
-	color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    font-family: Gudea;
-   
-    text-align: center;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  float: left;
+  display: block;
+	font-family: Gudea;
 }
 
 header .dropdown-content a:hover {
+  left: inherit;
 	z-index: 10;
-  display: flex;
-	
-	
     position: absolute;
     width: fit-content;
     justify-content: center;
     background-color: #FFA800;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    flex-wrap: nowrap;
-    flex-direction: column;
-    align-items: stretch;
+    
 }
 
 header .dropdown:hover .dropdown-content {
-  display: block;
+  display: flex;
   
 }
 	
@@ -173,11 +163,12 @@ header .dropdown:hover .dropdown-content {
 	    <li><a href="contact.html">Contact</a></li>
 	<li><a href="Example.html">Example</a></li>
 	</ul>
-	</nav> 
-	</header>  
+	</nav>
+</header>  
 
 
 
+<!--
     <div class="MenuDropdown" style="width: 177px; height: 278px; position: relative; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
   <div class="Rectangle60" style="width: 140px; height: 68px; left: 20px; top: 6px; position: absolute; background: #FF9575; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
   <button id="graphics"><a href="graphics.html">/Graphic Design</a></button></div>
@@ -194,7 +185,7 @@ header .dropdown:hover .dropdown-content {
     <div class="FilmPrototypeAssetsAndMotionGraphics" style="width: 138px; height: 16px; left: 21px; top: 237px; position: absolute; text-align: center; color: #080705; font-size: 14px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Film Prototype Assets and Motion Graphics</div>
   </div>
 </div>
-
+-->
   
   <div class="Group21" style="width: 1154px; height: 712.22px; left: 360px; top: 216px; position: absolute">
     <div class="Ellipse2" style="width: 126.41px; height: 115.55px; left: 280.48px; top: 94.08px; position: absolute; transform: rotate(167.21deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
@@ -249,9 +240,8 @@ header .dropdown:hover .dropdown-content {
     <div class="Ellipse53" style="width: 69.34px; height: 186.96px; left: 640.05px; top: 162.52px; position: absolute; transform: rotate(-70.08deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
     <div class="Ellipse54" style="width: 69.34px; height: 186.96px; left: 761.36px; top: 178.62px; position: absolute; transform: rotate(-70.08deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
     <div class="Ellipse55" style="width: 113.62px; height: 138.88px; left: 595.94px; top: 178.71px; position: absolute; transform: rotate(-21.51deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
- 
-	  <div class="HelloSoGladYouReHereIfYouAreLookingForJadeRobertsYouVeComeToTheRightPlaceUnlessYouReLookingForASylvesterStalloneImpersonatorThatSALittleAwkwardILikeToThinkOfMyselfAsAJadeOfAllTradesIMACuriousSoulAndAFastLearnerWithMeOnYourTeamWeCanDefinitelyKnockoutLikeRocky" style="width: 631px;z-index: 5;height: 531px;left: 60px;top: 242px;position: absolute;color: black;font-size: 32px;font-family: Lilita One;font-weight: 400;word-wrap: break-word;">Hello,<br><br>So glad you’re here. If you are looking for Jade Roberts, you’ve come to the right place. Unless you’re looking for a Sylvester Stallone impersonator. That’s a little awkward. <br><br>I like to think of myself as a Jade of all trades, I’m a curious soul and a fast learner. With me on your team, we can definitely knockout like Rocky. </div>
-
+  </div>
+ <div <div class="HelloSoGladYouReHereIfYouAreLookingForJadeRobertsYouVeComeToTheRightPlaceUnlessYouReLookingForASylvesterStalloneImpersonatorThatSALittleAwkwardILikeToThinkOfMyselfAsAJadeOfAllTradesIMACuriousSoulAndAFastLearnerWithMeOnYourTeamWeCanDefinitelyKnockoutLikeRocky" style="width: 631px;z-index: 0;height: 531px;left: 60px;top: 242px;position: absolute;color: black;font-size: 32px;font-family: Lilita One;font-weight: 400;word-wrap: break-word;">Hello,<br><br>So glad you’re here. If you are looking for Jade Roberts, you’ve come to the right place. Unless you’re looking for a Sylvester Stallone impersonator. That’s a little awkward. <br><br>I like to think of myself as a Jade of all trades, I’m a curious soul and a fast learner. With me on your team, we can definitely knockout like Rocky. </div>
 </body>
 </html>
 
