--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ header .dropdown:hover .dropdown-content {
 </div>
 -->
   
-  <div class="Group21" style="width: 1154px; height: auto; left: 360px; top: relative; position: absolute">
+  <div class="Group21" style="width: 1154px; height: auto; left: 360px; top: 200px; position: absolute">
     <div class="Ellipse2" style="width: 126.41px; height: 115.55px; left: 280.48px; top: 94.08px; position: absolute; transform: rotate(167.21deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
     <div class="Ellipse5" style="width: 126.41px; height: 115.55px; left: 401.79px; top: 110.18px; position: absolute; transform: rotate(167.21deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
     <div class="Ellipse6" style="width: 132.01px; height: 102.71px; left: 181.49px; top: 175.45px; position: absolute; transform: rotate(-172.06deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
@@ -241,7 +241,7 @@ header .dropdown:hover .dropdown-content {
     <div class="Ellipse54" style="width: 69.34px; height: 186.96px; left: 761.36px; top: 178.62px; position: absolute; transform: rotate(-70.08deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
     <div class="Ellipse55" style="width: 113.62px; height: 138.88px; left: 595.94px; top: 178.71px; position: absolute; transform: rotate(-21.51deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
   </div>
- <div <div class="HelloSoGladYouReHereIfYouAreLookingForJadeRobertsYouVeComeToTheRightPlaceUnlessYouReLookingForASylvesterStalloneImpersonatorThatSALittleAwkwardILikeToThinkOfMyselfAsAJadeOfAllTradesIMACuriousSoulAndAFastLearnerWithMeOnYourTeamWeCanDefinitelyKnockoutLikeRocky" style="width: 631px;z-index: 0;height: 531px;left: 60px;top: relative;position: absolute;color: black;font-size: 32px;font-family: Lilita One;font-weight: 400;word-wrap: break-word;">Hello,<br><br>So glad you’re here. If you are looking for Jade Roberts, you’ve come to the right place. Unless you’re looking for a Sylvester Stallone impersonator. That’s a little awkward. <br><br>I like to think of myself as a Jade of all trades, I’m a curious soul and a fast learner. With me on your team, we can definitely knockout like Rocky. </div>
+ <div <div class="HelloSoGladYouReHereIfYouAreLookingForJadeRobertsYouVeComeToTheRightPlaceUnlessYouReLookingForASylvesterStalloneImpersonatorThatSALittleAwkwardILikeToThinkOfMyselfAsAJadeOfAllTradesIMACuriousSoulAndAFastLearnerWithMeOnYourTeamWeCanDefinitelyKnockoutLikeRocky" style="width: 631px;z-index: 0;height: 531px;left: 60px;top: 200px ;position: absolute;color: black;font-size: 32px;font-family: Lilita One;font-weight: 400;word-wrap: break-word;">Hello,<br><br>So glad you’re here. If you are looking for Jade Roberts, you’ve come to the right place. Unless you’re looking for a Sylvester Stallone impersonator. That’s a little awkward. <br><br>I like to think of myself as a Jade of all trades, I’m a curious soul and a fast learner. With me on your team, we can definitely knockout like Rocky. </div>
 </body>
 </html>
 
