--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   <script src="script.js"></script>
 	
 <Title>     
-Jade Roberts Portfolio 
+About | Jade Roberts Portfolio 
 </Title>  
 <style type=text/css>  
 @import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
