--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@ header .dropdown:hover .dropdown-content {
       <i class="fa fa-caret-down"></i></a></li>
     </button>
     <div class="dropdown-content">
-      <a href="#">Graphic Design and Promotional Assets </a>
-      <a href="#">UX Research and Design </a>
-      <a href="#">Copywriting and Conversation Design </a>
-      <a href="#">Film Prototype Assets and Motion Graphics </a>
+      <li><a href="graphics.html">Graphic Design and Promotional Assets </a></li>
+      <li><a href="proto.html">UX Research and Design </a></li>
+      <li><a href="copy.html">Copywriting and Conversation Design </a></li>
+      <li><a href="Film.html">Film Prototype Assets and Motion Graphics </a></li>
     </div>
   </div> 
 	    <li><a href="shorts.html">Creative Outlets</a></li>
