--- a/index.html
+++ b/index.html
@@ -45,6 +45,20 @@ display: inline;
 	
 } 
 
+header li {  
+margin: 20px;  
+
+}  
+
+header li a {  
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  left: 60px; top: 35px;
+  font-size: 40px;
+  font-weight: 400;
+  font-family: Lilita One;
+}  
 
 /*dropdown section and placement*/
 
@@ -64,7 +78,7 @@ header .dropdown .dropbtn {
   margin: 0;
 }
 
-header a:hover, .dropdown:hover .dropbtn {
+a:hover, .dropdown:hover .dropbtn {
     background-color: #219EBC;
     border-size: 80px 900px;
     border-radius: 80px 900px;
@@ -72,7 +86,7 @@ header a:hover, .dropdown:hover .dropbtn {
 
 /*the link text*/
 
-header .dropdown-content {
+.dropdown-content {
    background-color: #FFF1DD;
 display: none;
   position: absolute;
@@ -81,7 +95,7 @@ display: none;
   z-index: 1;
 }
 
-header .dropdown-content a {
+.dropdown-content a {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
@@ -90,14 +104,14 @@ header .dropdown-content a {
 	font-family: Gudea;
 }
 
-header .dropdown-content a:hover {
+.dropdown-content a:hover {
  
     background-color: #FFA800;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     
 }
 
-header .dropdown:hover .dropdown-content {
+.dropdown:hover .dropdown-content {
   display: flex;
   
 }
