--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ header .dropdown .dropbtn {
   background-color: inherit;
   font-family: Gudea;
   margin: 0;
-}
+}}
 
 a:hover, .dropdown:hover .dropbtn {
     background-color: #219EBC;
@@ -113,11 +113,11 @@ display: none;
 
 .dropdown:hover .dropdown-content {
   display: flex;
-  
 }
+
 	
 </style>  
-</Head> 
+</head> 
 <Body style="
     height: 1000px";>   
 <header>  
