--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="script.js"></script>
 	
 <Title>     
-Jade Roberts Portfolio 
+Home | Jade Roberts Portfolio 
 </Title>  
 <style type=text/css>  
 @import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
@@ -76,9 +76,11 @@ header .dropdown .dropbtn {
   background-color: inherit;
   font-family: Gudea;
   margin: 0;
-}}
+}
 
-a:hover, .dropdown:hover .dropbtn {
+drop{}
+	
+drop a:hover, .dropdown:hover .dropbtn {
     background-color: #219EBC;
     border-size: 80px 900px;
     border-radius: 80px 900px;
@@ -86,7 +88,7 @@ a:hover, .dropdown:hover .dropbtn {
 
 /*the link text*/
 
-.dropdown-content {
+drop .dropdown-content {
    background-color: #FFF1DD;
 display: none;
   position: absolute;
@@ -95,7 +97,7 @@ display: none;
   z-index: 1;
 }
 
-.dropdown-content a {
+drop .dropdown-content a {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
@@ -104,14 +106,14 @@ display: none;
 	font-family: Gudea;
 }
 
-.dropdown-content a:hover {
+drop .dropdown-content a:hover {
  
     background-color: #FFA800;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     
 }
 
-.dropdown:hover .dropdown-content {
+drop .dropdown:hover .dropdown-content {
   display: flex;
 }
 
