--- a/index.html
+++ b/index.html
@@ -78,9 +78,7 @@ header .dropdown .dropbtn {
   margin: 0;
 }
 
-drop{}
-	
-drop a:hover, .dropdown:hover .dropbtn {
+a:hover, .dropdown:hover .dropbtn {
     background-color: #219EBC;
     border-size: 80px 900px;
     border-radius: 80px 900px;
@@ -88,7 +86,7 @@ drop a:hover, .dropdown:hover .dropbtn {
 
 /*the link text*/
 
-drop .dropdown-content {
+.dropdown-content {
    background-color: #FFF1DD;
 display: none;
   position: absolute;
@@ -97,23 +95,24 @@ display: none;
   z-index: 1;
 }
 
-drop .dropdown-content a {
+.dropdown-content a {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   float: left;
   display: block;
 	font-family: Gudea;
+	font-size: 20px;
 }
 
-drop .dropdown-content a:hover {
+.dropdown-content a:hover {
  
     background-color: #FFA800;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     
 }
 
-drop .dropdown:hover .dropdown-content {
+.dropdown:hover .dropdown-content {
   display: flex;
 }
 
