--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ display: none;
   z-index: 1;
 }
 
-.dropdown-content a {
+.dropdown-content li a {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
