--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ a:hover, .dropdown:hover .dropbtn {
    background-color: #FFF1DD;
 display: none;
   position: absolute;
-  min-width: 160px;
+  min-width: fit-content;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
