--- a/index.html
+++ b/index.html
@@ -97,12 +97,15 @@ display: none;
 
 .dropdown-content li a {
   color: black;
-  padding: 12px 16px;
+  padding: 6px 10px;
   text-decoration: none;
   float: left;
   display: block;
+	border: none;
+	 margin: 0;
 	font-family: Gudea;
 	font-size: 20px;
+	font-weight: 400;
 }
 
 .dropdown-content a:hover {
