--- a/index.html
+++ b/index.html
@@ -96,16 +96,14 @@ display: none;
 }
 
 .dropdown-content li a {
-  color: black;
-  padding: 6px 10px;
-  text-decoration: none;
-  float: left;
   display: block;
 	border: none;
 	 margin: 0;
+	min-width: fit-content;
+	min-height: fit-content
 	font-family: Gudea;
 	font-size: 20px;
-	font-weight: 400;
+	
 }
 
 .dropdown-content a:hover {
