--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@ a:hover, .dropdown:hover .dropbtn {
 display: none;
   position: absolute;
   min-width: fit-content;
+	margin: 0;
+	min-height: fit-content;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
@@ -98,9 +100,6 @@ display: none;
 .dropdown-content li a {
   display: block;
 	border: none;
-	 margin: 0;
-	min-width: fit-content;
-	min-height: fit-content
 	font-family: Gudea;
 	font-size: 20px;
 	
