--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ display: none;
   position: absolute;
   min-width: fit-content;
 	margin: 0;
+	padding: 0;
 	min-height: fit-content;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -106,7 +107,7 @@ display: none;
 }
 
 .dropdown-content a:hover {
- 
+ padding: 2px 4px;
     background-color: #FFA800;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     
