--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@ a:hover, .dropdown:hover .dropbtn {
 display: none;
   position: absolute;
   min-width: fit-content;
+min-height: 5px;
 	margin: 0;
 	padding: 0;
-	min-height: fit-content;
+	
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
@@ -107,7 +108,6 @@ display: none;
 }
 
 .dropdown-content a:hover {
- padding: 6px 14px;
     background-color: #FFA800;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     
