--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@ a:hover, .dropdown:hover .dropbtn {
     border-radius: 80px 900px;
 }
 
-/*the link text*/
+/*the link text and box*/
 
 .dropdown-content {
    background-color: #FFF1DD;
 display: none;
   position: absolute;
   min-width: fit-content;
-min-height: 5px;
+min-height: min-content;
 	margin: 0;
 	padding: 0;
 	
