--- a/index.html
+++ b/index.html
@@ -45,11 +45,6 @@ display: inline;
 	
 } 
 
-header li {  
-margin: 20px;  
-
-}  
-
 header li a {  
   color: black;
   text-align: center;
@@ -100,10 +95,13 @@ min-height: min-content;
 }
 
 .dropdown-content li a {
-  display: block;
-	border: none;
-	font-family: Gudea;
-	font-size: 20px;
+    padding: 12px 16px;
+    text-decoration: none;
+    float: left;
+    display: block;
+    font-family: Gudea;
+  left: auto; top: auto;
+  font-size: 24px;
 	
 }
 
