--- a/index.html
+++ b/index.html
@@ -87,13 +87,14 @@ a:hover, .dropdown:hover .dropbtn {
 /*the link text and box*/
 
 .dropdown-content {
-   background-color: #FFF1DD;
+   margin: 0px;
+	padding: 0px;
+	background-color: #FFF1DD;
 display: none;
   position: absolute;
   min-width: fit-content;
 min-height: min-content;
-	margin: 0;
-	padding: 0;
+	
 	
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -101,11 +102,10 @@ min-height: min-content;
 
 .dropdown-content li a {
     padding: 12px 16px;
-    text-decoration: none;
+    margin:0px;
     float: left;
     display: block;
     font-family: Gudea;
-  left: auto; top: auto;
   font-size: 24px;
 	
 }
