--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@ min-height: min-content;
       <i class="fa fa-caret-down"></i></a></li>
     </button>
     <div class="dropdown-content">
-      <li><a href="graphics.html">Graphic Design and Promotional Assets </a></li>
-      <li><a href="proto.html">UX Research and Design </a></li>
-      <li><a href="copy.html">Copywriting and Conversation Design </a></li>
-      <li><a href="Film.html">Film Prototype Assets and Motion Graphics </a></li>
+     <a href="graphics.html">Graphic Design and Promotional Assets </a>
+      <a href="proto.html">UX Research and Design </a>
+      <a href="copy.html">Copywriting and Conversation Design </a>
+      <a href="Film.html">Film Prototype Assets and Motion Graphics </a>
     </div>
   </div> 
 	    <li><a href="shorts.html">Creative Outlets</a></li>
