--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ min-height: min-content;
   z-index: 1;
 }
 
-.dropdown-content li a {
+.dropdown-content a {
     padding: 12px 16px;
     margin:0px;
     float: left;
