--- a/index.html
+++ b/index.html
@@ -101,9 +101,12 @@ min-height: min-content;
 }
 
 .dropdown-content a {
-    padding: 12px 16px;
+    color: black;
+  text-align: center;
+  text-decoration: none;
+  font-weight: 400;
+	padding: 12px 16px;
     margin:0px;
-    float: left;
     display: block;
     font-family: Gudea;
   font-size: 24px;
