--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@ background-color: #8ecae6;
 position: fixed;  
 left: 0;  
 right: 0;   
-height: 100px;  
+height: max-content;
 display: flex;  
 align-items: center;  
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
@@ -153,7 +153,7 @@ min-height: min-content;
 	</nav>
 </header>  
   <body>
-  <div class="Bg" style="width: 1998.04px; height: 877.90px; left: -226px; top: 876px; position: absolute">
+  <div class="Bg" style="left: auto;  top: 876px; position: absolute">
     <div class="Pattern" style="width: 402.04px; height: 318.90px; left: 196px; top: 559px; position: absolute">
       <div class="Ellipse5" style="width: 118px; height: 199.50px; left: 230.98px; top: 197.76px; position: absolute; transform: rotate(98deg); transform-origin: 0 0; background: linear-gradient(285deg, rgba(222, 77, 134, 0.50) 0%, rgba(142, 202, 230, 0.50) 100%)"></div>
       <div class="Ellipse6" style="width: 118px; height: 199.50px; left: 350.31px; top: 9px; position: absolute; transform: rotate(64deg); transform-origin: 0 0; background: linear-gradient(285deg, rgba(222, 77, 134, 0.50) 0%, rgba(142, 202, 230, 0.50) 100%)"></div>
