--- a/shorts.html
+++ b/shorts.html
@@ -15,7 +15,7 @@ Home | Jade Roberts Portfolio
 @import url('https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&display=swap');
 body {
   /* Define the gradient */
-  background-image: linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%);
+  background-image: linear-gradient(180deg, #FFF1DD; 0%, #219EBC 100%);
   
   /* Set the height to 100% to take the full view */
   height: auto;
@@ -33,6 +33,7 @@ background-color: ##FFF1DD;;
 position: fixed;  
 left: 0;  
 right: 0;   
+	height:1000px;
 display: flex;  
 align-items: center;  
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
