--- a/about.html
+++ b/about.html
@@ -19,13 +19,10 @@ body {
   background-image: linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%);
   
   /* Set the height to 100% to take the full view */
-  height: auto;
+  height: 100%;
   
   /* Set the margin to 0 to remove browser default margins */
   margin: 0;
-  
-  /* No scroll bar*/
-  overflow: hidden;
 }
 
 header {  
@@ -34,7 +31,7 @@ background-color: #8ecae6;
 position: fixed;  
 left: 0;  
 right: 0;   
-height: 1000px;
+height: 100px;
 display: flex;  
 align-items: center;  
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
