--- a/shorts.html
+++ b/shorts.html
@@ -26,8 +26,7 @@ body {
 }
 
 header {  
-  
-background-color: ##FFF1DD;;  
+background-color: #219EBC;  
 position: fixed;  
 left: 0;  
 right: 0;   
@@ -150,7 +149,7 @@ min-height: min-content;
 	</nav>
 </header>  
   <body>
-  <div class="CreativeOutlets" style="width: 1440px; height: 3436px; position: relative; background: #FFF1DD">
+ 
   <div class="Design" style="width: 2000.04px; height: 877.90px; left: -240px; top: 2338px; position: absolute">
     <div class="Bg" style="width: 1998.04px; height: 877.90px; left: 0px; top: 0px; position: absolute">
       <div class="Pattern" style="width: 402.04px; height: 318.90px; left: 196px; top: 559px; position: absolute">
@@ -237,7 +236,6 @@ min-height: min-content;
         <div class="Ellipse7" style="width: 118px; height: 199.50px; left: 171px; top: 280.83px; position: absolute; transform: rotate(-79deg); transform-origin: 0 0; background: linear-gradient(90deg, #FFF1DD 67%, #FFA800 100%)"></div>
         <div class="Ellipse8" style="width: 118px; height: 199.50px; left: 69.36px; top: 212.73px; position: absolute; transform: rotate(-126deg); transform-origin: 0 0; background: linear-gradient(90deg, #FFF1DD 67%, #FFA800 100%)"></div>
       </div>
-    </div>
     <div class="Bg" style="width: 1998.04px; height: 877.90px; left: 2px; top: 0px; position: absolute">
       <div class="Pattern" style="width: 402.04px; height: 318.90px; left: 196px; top: 559px; position: absolute">
         <div class="Ellipse5" style="width: 118px; height: 199.50px; left: 230.98px; top: 197.76px; position: absolute; transform: rotate(98deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
