--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ header {
 background-color: #8ecae6;  
 position: fixed;  
 left: 0;  
+z-index:10;
 right: 0;   
 height: 100px;  
 display: flex;  
