--- a/about.html
+++ b/about.html
@@ -121,6 +121,9 @@ min-height: min-content;
   display: flex;
 }
 
+Bg div {
+	z-index:5;align-items:center; position: absolute;
+}
 	
 </style>  
 </head> 
@@ -150,7 +153,7 @@ min-height: min-content;
 	</nav>
 </header>  
   <body>
-  <div class="Bg" style="align-items:center; position: absolute, z-index: 5;">
+  <div class="Bg" >
     <div class="Pattern" style="width: 402.04px; height: 318.90px; left: 196px; top: 559px; position: absolute">
       <div class="Ellipse5" style="width: 118px; height: 199.50px; left: 230.98px; top: 197.76px; position: absolute; transform: rotate(98deg); transform-origin: 0 0; background: linear-gradient(285deg, rgba(222, 77, 134, 0.50) 0%, rgba(142, 202, 230, 0.50) 100%)"></div>
       <div class="Ellipse6" style="width: 118px; height: 199.50px; left: 350.31px; top: 9px; position: absolute; transform: rotate(64deg); transform-origin: 0 0; background: linear-gradient(285deg, rgba(222, 77, 134, 0.50) 0%, rgba(142, 202, 230, 0.50) 100%)"></div>
