--- a/about.html
+++ b/about.html
@@ -124,6 +124,10 @@ min-height: min-content;
 Bg div {
 	z-index:5;align-items:center; position: absolute;
 }
+
+Pattern div {
+	z-index:5;align-items:center; position: absolute;
+}
 	
 </style>  
 </head> 
