--- a/about.html
+++ b/about.html
@@ -126,7 +126,7 @@ Bg div {
 }
 
 Pattern div {
-	z-index:5;align-items:center; position: absolute;
+	z-index:5; position: absolute;
 }
 	
 </style>  
