--- a/about.html
+++ b/about.html
@@ -126,7 +126,7 @@ Bg div {
 }
 
 Pattern div {
-	z-index:5; position: absolute;
+	z-index:5; align-items:center; position: absolute;
 }
 	
 </style>  
@@ -243,7 +243,7 @@ Pattern div {
       <div class="Ellipse8" style="width: 118px; height: 199.50px; left: 69.36px; top: 212.73px; position: absolute; transform: rotate(-126deg); transform-origin: 0 0; background: linear-gradient(285deg, rgba(222, 77, 134, 0.50) 0%, rgba(142, 202, 230, 0.50) 100%)"></div>
     </div>
   </div>
-  <img class="Rectangle56" style="width: 300px; height: 300px; left: 107px; top: 1948px; position: absolute" src="https://via.placeholder.com/300x300" />
+  <img class="Rectangle56" style="width: auto; height: auto; left: auto; top: 1948px; position: relative" src="https://via.placeholder.com/300x300" />
   <div class="Shoutouts" style="left: 570px; top: 1819px; position: absolute; color: black; font-size: 64px; font-family: Josefin Sans; font-weight: 400; word-wrap: break-word">Shoutouts</div>
   <div class="ProblemSolver" style="left: 557px; top: 767px; position: absolute; color: black; font-size: 64px; font-family: Josefin Sans; font-weight: 400; word-wrap: break-word">Problem-Solver</div>
   <div class="Nouns" style="width: 1065px; height: 582.50px; left: 138px; top: 253px; position: absolute">
