--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ min-height: min-content;
 	</ul>
 	</nav>
 </header>  
-  
+  <img class="Rectangle3" style="width: 1154px; height: auto; left: 360px; top: 200px;; position: absolute; border-radius: 72px" src="images/Group21.png" />
   <div class="Group21" style="width: 1154px; height: auto; left: 360px; top: 200px; position: absolute">
     <div class="Ellipse2" style="width: 126.41px; height: 115.55px; left: 280.48px; top: 94.08px; position: absolute; transform: rotate(167.21deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
     <div class="Ellipse5" style="width: 126.41px; height: 115.55px; left: 401.79px; top: 110.18px; position: absolute; transform: rotate(167.21deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
