--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 About | Jade Roberts Portfolio 
 </Title>  
 <style>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&family=Lilita+One&display=swap" rel="stylesheet">
 body {
@@ -24,14 +24,9 @@ body {
   
   /* Set the margin to 0 to remove browser default margins */
   margin: 0;
-}
-
-Bg div {
-	z-index:5;align-items:center; position: absolute;
-}
-
-Pattern div {
-	z-index:5; align-items:center; position: absolute;
+	 
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 	
 </style>  
