--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ body {
 	</ul>
 	</nav>
 </header>  
-  <img class="Rectangle3" style="width: 1154px; height: auto; left: auto; top: auto; position: absolute; border-radius: 72px" src="images/Pattern 1.svg" />
+  <img class="Rectangle3" style="width: auto; height: auto; left: 400px; top: 180px; position: absolute; border-radius: 72px" src="images/Pattern 1.svg" />
  
  <div <div class="HelloSoGladYouReHereIfYouAreLookingForJadeRobertsYouVeComeToTheRightPlaceUnlessYouReLookingForASylvesterStalloneImpersonatorThatSALittleAwkwardILikeToThinkOfMyselfAsAJadeOfAllTradesIMACuriousSoulAndAFastLearnerWithMeOnYourTeamWeCanDefinitelyKnockoutLikeRocky" style="width: 631px;z-index: 0;height: 531px;left: 60px;top: 200px ;position: absolute;color: black;font-size: 32px;font-family: Lilita One;font-weight: 400;word-wrap: break-word;">Hello,<br><br>So glad you’re here. If you are looking for Jade Roberts, you’ve come to the right place. Unless you’re looking for a Sylvester Stallone impersonator. That’s a little awkward. <br><br>I like to think of myself as a Jade of all trades, I’m a curious soul and a fast learner. With me on your team, we can definitely knockout like Rocky. </div>
 </body>
