--- a/about.html
+++ b/about.html
@@ -176,3 +176,5 @@ body {
   <img class="Rectangle59" style="width: 300px; height: 300px; left: 1033px; top: 1948px; position: absolute" src="https://via.placeholder.com/300x300" />
 </div>
   </body>
+</Body>
+</html>
