--- a/graphics.html
+++ b/graphics.html
@@ -8,9 +8,14 @@
   <script src="script.js"></script>
 	
 <Title>     
-Work| Jade Roberts Portfolio 
+Graphics | Jade Roberts Portfolio 
 </Title>  
 </head> 
+	<style>  
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&display=swap');
+
+</style>
 <Body style="
     height: 1000px";>   
 <header>  
@@ -38,7 +43,7 @@ Work| Jade Roberts Portfolio
 </header>  
   <body>
    
-  <div class="Frame1" style="width: 400px; left: 80px; top: 400px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 10px; overflow: hidden; border: 1px black solid; justify-content: center; align-items: center; display: inline-flex">
+  <div class="Frame1" style="width: auto; left: 80px; top: 400px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 10px; overflow: hidden; border: 1px black solid; justify-content: center; align-items: center; display: inline-flex">
     <img class="Image1" style="width: 400px; height: 405px" src="https://via.placeholder.com/400x405" />
   </div>
   <div class="Frame2" style="width: 400px; height: 400px; left: 960px; top: 402px; position: absolute; border-radius: 40px; border: 1px black solid; backdrop-filter: blur(4px); justify-content: center; align-items: center; display: inline-flex">
@@ -60,9 +65,9 @@ Work| Jade Roberts Portfolio
   <div class="Frame6" style="height: 640px; padding-bottom: 44px; left: 86px; top: 2640px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 10px; overflow: hidden; flex-direction: column; justify-content: flex-start; align-items: center; display: inline-flex">
     <img class="Image8" style="width: 574.29px; height: 596px" src="https://via.placeholder.com/574x596" />
   </div>
-  <div class="Rectangle4" style="width: 1500px; height: 160px; left: -60px; top: 160px; position: absolute; background: #FF9575"></div>
-  <div class="Rectangle6" style="width: 1500px; height: 160px; left: -24px; top: 2320px; position: absolute; background: #FF9575"></div>
-  <div class="Rectangle5" style="width: 1500px; height: 160px; left: -22px; top: 1120px; position: absolute; background: #FF9575"></div>
+  <div class="Rectangle4" style="width: auto; height: 160px; left: -60px; top: 160px; position: absolute; background: #FF9575"></div>
+  <div class="Rectangle6" style="width: auto; height: 160px; left: -24px; top: 2320px; position: absolute; background: #FF9575"></div>
+  <div class="Rectangle5" style="width: auto; height: 160px; left: -22px; top: 1120px; position: absolute; background: #FF9575"></div>
   <div class="DigitalArtAndDesignAssociation" style="width: 1281px; left: 87px; top: 220px; position: absolute; text-align: center; color: #080705; font-size: 40px; font-family: Gudea; font-weight: 700; word-wrap: break-word">Digital Art and Design Association</div>
   <div class="GiesCollegeOfBusiness" style="width: 1222px; height: 163px; left: 122px; top: 1120px; position: absolute; text-align: center; color: #080705; font-size: 40px; font-family: Gudea; font-weight: 700; word-wrap: break-word">Gies College of Business</div>
   <div class="BrainMattersJournal" style="width: 1183px; height: 149px; left: 137px; top: 2325px; position: absolute; text-align: center; color: #080705; font-size: 40px; font-family: Gudea; font-weight: 700; word-wrap: break-word">Brain Matters Journal</div>
@@ -77,11 +82,5 @@ Work| Jade Roberts Portfolio
         <div class="Rectangle2" style="width: 61.20px; height: 102.55px; left: 21px; top: 13px; position: absolute; transform: rotate(-12.15deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(222, 77, 134, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%)"></div>
       </div>
     </div>
-    <div class="AboutJade" style="left: 230px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">About Jade</div>
-    <div class="Home" style="left: 58px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Home</div>
-    <div class="Projects" style="left: 497px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Projects</div>
-    <div class="CreativeOutlets" style="left: 711px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Creative Outlets</div>
-    <div class="Contact" style="left: 1065px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Contact</div>
-  </div>
 </div>
   </body>
